@@ -1,3 +1,3 @@
 PREFIX=$(HOME)/usr
 PROJNAME=cure
-VERSION=1.0.0-beta5
+VERSION=1.1.0
